--- a/IntrestManagementSystem/src/main/resources/application.properties
+++ b/IntrestManagementSystem/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=IntrestManagementSystem
 
-spring.datasource.url= jdbc:mysql://localhost:3306/intrest?createDatabaseIfNotExist=true
+spring.datasource.url= jdbc:mysql://root:jZCVnJqtUciEXxzkjnelepYwjteutbBB@mysql.railway.internal:3306/intrest?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=test@12
+spring.datasource.password=jZCVnJqtUciEXxzkjnelepYwjteutbBB
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
