--- a/IntrestManagementSystem/src/main/resources/application.properties
+++ b/IntrestManagementSystem/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=IntrestManagementSystem
 
-spring.datasource.url= mysql://root:root@mysql.railway.internal:3306/intrest?createDatabaseIfNotExist=true
+spring.datasource.url= mysql://root:pZYtKtSHNXuIexEGAnlHvKsxxCWunuRj@switchback.proxy.rlwy.net:26165/railway?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=pZYtKtSHNXuIexEGAnlHvKsxxCWunuRj
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
